# bevy_fluent

./: .gitignore  Cargo.toml  DOCUMENTATION.en-US.md  DOCUMENTATION.ru-RU.md  LICENSE-MIT  README.md  README.ru-RU.md
.github/: bors.toml  dependabot.yml
.github/workflows/: ci.yml  rust.yml
assets/locales/: bundle.ron  first_interlocale_resource.ftl  interlocale.ftl  locale.ron
assets/locales/de/: hello_world.ftl  one.ftl  two.ftl
assets/locales/en-US/: bundle.ron  one.ftl  two.ftl
assets/locales/ru-RU/: bundle.ron  two.ftl
assets/locales/ru/ru-BY/: hello_world.ftl  one.ftl  two.ftl
assets/locales/ru/ru-RU/: locale.ron  one.ftl
doc/: en-US.md  ru-RU.md
examples/: demo.rs  minimal.rs  with_state.rs
examples/complex/: main.rs
examples/complex/assets/locales/monolingual/: .ftl.yml
examples/complex/assets/locales/monolingual/en-US/: main.ftl
examples/complex/assets/locales/monolingual/ru/ru-RU/: main.ftl
examples/complex/assets/locales/multilingual/: .ftl.ron
examples/default_locale/: main.rs
examples/default_locale/assets/locales/: .ftl.ron  ru-RU.ftl
examples/demo/: main.rs
examples/fallback_chain/: main.rs
examples/fallback_chain/assets/locales/: .ftl.ron
examples/fallback_chain/assets/locales/en-US/: hello_world.ftl
examples/fallback_chain/assets/locales/ru/ru-BY/: hello_world.ftl  main.ftl.ron
examples/fallback_chain/assets/locales/ru/ru-RU/: main.ftl.ron
examples/labels/: main.rs
examples/labels/assets/locales/: en-US.ftl
examples/minimal/: main.rs
examples/minimal/assets/locales/: .ftl.yml
examples/minimal/assets/locales/en-US/: locale.ron  main.ftl.ron  main.ftl.yml
examples/multilingual/: main.rs
examples/multilingual/assets/locales/: .ftl.ron  de-DE.ftl  en-US.ftl  ru-RU.ftl
examples/trivial/: main.rs
examples/trivial/assets/locales/: with_default.ftl.ron  without_default.ftl.ron
examples/ui/: locales.rs  main.rs  pathfinders.rs  to_sentence_case.rs
examples/ui/assets/locales/: .ftl.ron
examples/ui/assets/locales/de-DE/: menu.ftl.ron  menu.ron
examples/ui/assets/locales/de-DE/menu/: ui.ftl
examples/ui/assets/locales/en-US/: menu.ftl.ron  menu.ron  temp.ftl
examples/ui/assets/locales/en-US/menu/: ui.ftl
examples/ui/assets/locales/interlocale/: menu.ron
examples/ui/assets/locales/interlocale/menu/: locales.ftl
examples/ui/assets/locales/ru/ru-BY/: menu.ftl.ron  menu.ron
examples/ui/assets/locales/ru/ru-RU/: menu.ftl.ron  menu.ron
examples/ui/assets/locales/und/: menu.ftl.ron
examples/ui/components/: mod.rs  tags.rs
examples/ui/resources/: mod.rs
examples/ui/systems/: load.rs  menu.rs  mod.rs
examples/ui/systems/parameters/: mod.rs
examples/with_args/: main.rs
examples/with_args/assets/locales/de-DE/: apples.ftl  main.ftl.ron
examples/with_args/assets/locales/en-US/: apples.ftl  hello-world.ftl  main.ftl.ron
src/: error.rs  lib.rs
src/assets/: bundle.rs  bundles copy.rs  bundles.rs  error.rs  fluent.rs  locale.rs  localization.rs  mod.rs  resource.rs
src/components/: cache.rs  handles.rs  mod.rs  queue.rs  settings.rs  snapshot.rs  state.rs
src/exts/: bundle.rs  mod.rs  path.rs
src/exts/bevy/: asset.rs  mod.rs
src/exts/fluent/: bundle.rs  content.rs  mod.rs
src/plugins/: mod.rs
src/resources/: bundles.rs  fallback_chain.rs  handles.rs  locale.rs  locales.rs  localization.rs  mod.rs  settings.rs  snapshot.rs
src/states/: mod.rs
src/systems/: check_assets.rs  init_resources.rs  load_assets.rs  mod.rs  serve.rs  snapshot.rs  take_snapshot.rs
src/systems/parameters/: mod.rs  server.rs
src/utils/: bundle.rs  commands.rs  mod.rs
tests/: content.rs  request.rs
(+3 files in other folders)
